[BUG #3913] Rendering issue with title background and resize indicator played with margin and padding to accommodate an ie6 issue of not stretching 100% as the parent div.
git-svn-id: https://qooxdoo.svn.sourceforge.net/svnroot/qooxdoo/branches/branch_1_2_x@24246 61aaf1ca-a10e-0410-b9fb-ac63ec25887f

--- a/qooxdoo/application/portal/source/resource/portal/css/style.css
+++ b/qooxdoo/application/portal/source/resource/portal/css/style.css
@@ -53,7 +53,7 @@ body {
   border: 1px solid #444;
   width: 300px;
   height: 100px;
-  margin: 10px;
+  margin: 10px 0px;
   padding: 10px;
   background-color: #FDFFFA;
   
@@ -111,7 +111,7 @@ southeast {
 }
 
 .box_content {
-  margin-top : 12px;
+  margin : 12px 0px 0px 10px;
 }
 
 .falseValue,
